# opentelemetry-instrument-openai-py

./: README.md  pyproject.toml
.github/workflows/: CI.yaml  publish.yml
example/: .env.example  README.md  chat.py  pyproject.toml
src/opentelemetry/instrumentation/openai/: __init__.py  package.py  version.py
tests/: __init__.py  test_openai_instrumentation.py
